basic styling/java/html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather 🌤️</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="card" style="width:18rem">
+    <div class="app-wrap">
+        <header>
+            <input type="text" autocomplete="off" class="search-box"
+            placeholder="search for a city" />
+        </header>
+        <main>
+            <div class="card">
+            <section class="location">
+                <div class="city">city</div>
+                <div class="date">date</div>
+            </section> 
+            <div class="current">
+                <div class="temp">temp</div>
+                <div class="weather">weather</div>
+                <div class="high-low">high-low</div>
+                <div class="humidity">humidity</div>
+                <div class="windSpeed">wind speed</div>
+            </div>
+        </div>
+        </main>
+    </div>
+</div>
 
 
-<bold>I AM THE WEATHER</bold>
-
-<script src="myscripts.js"></script>
+<script src="script.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
