Read Me update/ basic bootstrap update

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card" style="width:18rem">
-    <div class="app-wrap">
-        <header>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Weather</h1>
+          <h2>Search a City:</h2>
+          <header>
             <input type="text" autocomplete="off" class="search-box"
             placeholder="search for a city" />
         </header>
+        </div>
+      </div>
+    <!-- <div class="card" justify-content="center"> -->
+    <!-- <div class="app-wrap"> -->
+        
         <main>
-            <div class="card">
+            <div class="card" style="background-color: peachpuff;">
             <section class="location">
                 <div class="city">city</div>
                 <div class="date">date</div>
