small style changes

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
         <div class="container">
           <h1 class="display-4">Weather</h1>
           <h2>Search a City:</h2>
-          <header>
-            <input type="text" autocomplete="off" class="search-box"
+          <input type="text" autocomplete="off" class="search-box"
             placeholder="search for a city" />
-        </header>
-        </div>
-      </div>
-    <!-- <div class="card" justify-content="center"> -->
-    <!-- <div class="app-wrap"> -->
-        
-        <main>
-            <div class="card" style="background-color: peachpuff;">
+            <main>
+        <div class="card" style="background-color: peachpuff;">
             <section class="location">
-                <div class="city">city</div>
-                <div class="date">date</div>
+            <div class="city">city</div>
+            <div class="date">date</div>
             </section> 
             <div class="current">
-                <div class="temp">temp</div>
-                <div class="weather">weather</div>
-                <div class="high-low">high-low</div>
-                <div class="humidity">humidity</div>
-                <div class="windSpeed">wind speed</div>
+            <div class="temp">temp</div>
+            <div class="weather">weather</div>
+            <div class="high-low">high-low</div>
+            <div class="humidity">humidity</div>
+            <div class="windSpeed">wind speed</div>
+                </div>
             </div>
+            </main>
         </div>
-        </main>
-    </div>
-</div>
+    
+    <!-- <div class="app-wrap"> -->
+   
+        </div>
 
+
+
+
+<div class="cardContainer d-flex flex-column align-items-center mt-4" id="cardContainer"></div>
 
 <script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
